tests/positive/Whitespace.juvix
module Whitespace;

import Stdlib.Prelude open;
		f (x : Nat) : Nat := x;
	main : Nat := f 10;
